<resources>
    <string name="app_name">scorekeeperapp</string>
    <string name="team_a_0_0">Team A: 0/0</string>
    <string name="_6_runs">6 Runs</string>
    <string name="_4_runs">4 Runs</string>
    <string name="_1_run">1 Run</string>
    <string name="wicket">Wicket</string>
    <string name="team_b_0_0">Team B: 0/0</string>
    <string name="overs_0">Overs: 0</string>
    <string name="team_a_1">Team A +1</string>
    <string name="CricketScoreKeeper">Cricket Score Keeper </string>
    <string name="topAppBar">Criket Score Keeper</string>
    <string name="about">About</string>
    <string name="team_b_0">Team B: 0</string>
    <string name="team_a_0">Team A: 0</string>
    <string name="team_a_6">Team A +6</string>
    <string name="team_a_11">Team A +1</string>
    <string name="team_a_4">Team A +4</string>
    <string name="team_a_wicket">Team A Wicket</string>
    <string name="team_b_4">Team B +4</string>
    <string name="team_b_wicket">Team B Wicket</string>
    <string name="team_b_1">Team B +1</string>
    <string name="team_b_6">Team B +6</string>
    <string name="overs_00">Overs: 0</string>
</resources>