<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/teamAScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a_0_0"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/teamASixButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_runs"
        android:layout_below="@id/teamAScore"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/teamAFourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_runs"
        android:layout_below="@id/teamASixButton"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/teamARunButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_run"
        android:layout_below="@id/teamAFourButton"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/teamAWicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wicket"
        android:layout_below="@id/teamARunButton"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/teamBScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_b_0_0"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/teamBSixButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6 Runs"
        android:layout_below="@id/teamBScore"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/teamBFourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4 Runs"
        android:layout_below="@id/teamBSixButton"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/teamBRunButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1 Run"
        android:layout_below="@id/teamBFourButton"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/teamBWicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wicket"
        android:layout_below="@id/teamBRunButton"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/oversTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overs_0"
        android:textSize="20sp"
        android:layout_below="@id/teamAWicketButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
